--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
 .jumbotron .col {
   margin: auto;
 }
+.nav-tabs .nav-link {
+  color:#b40086;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -31,9 +35,13 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #b40086;
+  font-weight:400;
 }
-
+ span a{
+  color: #b40086;
+  font-weight:400;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
