--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,78 @@
 .jumbotron {
   background-image: url('../src/assets/img/hero.jpeg');
   color: #ffffff;
+  border-bottom:solid 10px #b40086;
+
 }
 .jumbotron .col {
   margin: auto;
+  
 }
 .nav-tabs .nav-link {
   color:#b40086;
+}
+form {
+  width: 90%;
+}
+
+.contact-form {
+  padding: 25px 5% 10px 5%;
+  /* margin: 0 350px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
+button {
+  border-radius: 10px !important;
+  font-size: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 0 0 15px 0;
+  padding: 1rem 1.5rem;
+  outline: none;
+  cursor: pointer;
+  color:#fff;
+  background-color:#b40086;
+  transition: background-color ease-in-out 0.5s, opacity;
+
+}
+
+button:hover {
+  background-color:#df93cc;
+  border-radius: 10px;
+}
+
+label {
+  margin-right: 15px;
+  padding: 8px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 600;
+  width:15%;
+}
+
+input {
+  width: 500px;
+  font-size: 1rem;
+  padding: 0.25rem;
+  border: 1px solid #eee;
+  outline: none;
+  border-radius: 3px;
+  transition: box-shadow 0.2s;
+}
+.message-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+textarea {
+	width: 500px;
+  border: 1px solid #eee;
+  border-radius: 3px;
+	padding: 5px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
